--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,37 +1,75 @@
 name: eCommerce-Microservices
+
 on:
   push:
     branches:
       - master
     paths:
-      - '/services/user-service'
+      - 'services/user-service'
   pull_request:
     types: [opened, synchronize, reopened]
+
 jobs:
-  sonarcloudScan1:
-    name: SonarCloudScan1
+  build-and-analyze-user-service:
+    name: Build and Analyze user-service
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          SONAR_TOKEN: ${{ secrets.USER_SONAR_TOKEN }}
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          projectBaseDir: /services/user-service/
+          java-version: 17
+          distribution: 'zulu' # Alternative distribution options are available
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+      - name: Cache Gradle packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: ${{ runner.os }}-gradle
+      - name: Build and analyze user-service
+        working-directory: services/user-service
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.USER_SONAR_TOKEN }}
+        run: ./gradlew build sonar --info
 
-  # sonarcloudScan2:
-  #   name: SonarCloudScan2
+  # build-and-analyze-repo2:
+  #   name: Build and Analyze Repo2
   #   runs-on: ubuntu-latest
+
   #   steps:
   #     - uses: actions/checkout@v3
   #       with:
-  #         fetch-depth: 0
-  #     - name: SonarCloud Scan
-  #       uses: SonarSource/sonarcloud-github-action@master
-  #       env:
-  #         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  #         fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+  #     - name: Set up JDK 17
+  #       uses: actions/setup-java@v3
   #       with:
-  #         projectBaseDir: repo2/
+  #         java-version: 17
+  #         distribution: 'zulu' # Alternative distribution options are available
+  #     - name: Cache SonarCloud packages
+  #       uses: actions/cache@v3
+  #       with:
+  #         path: ~/.sonar/cache
+  #         key: ${{ runner.os }}-sonar
+  #         restore-keys: ${{ runner.os }}-sonar
+  #     - name: Cache Gradle packages
+  #       uses: actions/cache@v3
+  #       with:
+  #         path: ~/.gradle/caches
+  #         key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+  #         restore-keys: ${{ runner.os }}-gradle
+  #     - name: Build and analyze repo2
+  #       working-directory: repo2
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+  #         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  #       run: ./gradlew build sonar --info
