--- a/services/product-service/src/main/resources/application.yml
+++ b/services/product-service/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 server:
-  port: 8081
+  port: 8082
   servlet:
-    context-path: /api/user
+    context-path: /api/product
 spring:
   application:
-    name: userservice
+    name: productservice
   datasource:
     url: jdbc:mysql://localhost:3306/ecommerce_microservices
     username: user
@@ -12,7 +12,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
     properties:
       hibernate:
