--- a/services/product-service/build.gradle
+++ b/services/product-service/build.gradle
@@ -2,6 +2,15 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.1'
 	id 'io.spring.dependency-management' version '1.1.5'
+	id "org.sonarqube" version "4.4.1.3373"
+}
+
+sonar {
+	properties {
+		property "sonar.projectKey", "mukulgaur_eCommerce-Microservices_product-service"
+		property "sonar.organization", "mukulgaur"
+		property "sonar.host.url", "https://sonarcloud.io"
+	}
 }
 
 group = 'com.ecommerce-microservices'
