--- a/.github/workflows/product.yml
+++ b/.github/workflows/product.yml
@@ -29,4 +29,4 @@ jobs:
         projectBaseDir: services/product-service
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_PRODUCT }}
