--- a/.github/workflows/user.yml
+++ b/.github/workflows/user.yml
@@ -29,4 +29,4 @@ jobs:
         projectBaseDir: services/user-service
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_USER }}
