--- a/services/product-service/sonar-project.properties
+++ b/services/product-service/sonar-project.properties
@@ -1,3 +1,3 @@
 sonar.projectKey=mukulgaur_eCommerce-Microservices_product-service
 sonar.organization=mukulgaur
-sonar.sources=../services/product-service
+sonar.sources=./services/product-service
