--- a/.github/workflows/product.yml
+++ b/.github/workflows/product.yml
@@ -23,6 +23,8 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
+    - name: Debug Environment Variables
+      run: echo "SONAR_TOKEN=${{ secrets.SONAR_TOKEN_PRODUCT }}"
     - name: SonarCloud Scan
       uses: sonarsource/sonarcloud-github-action@master
       with:
