--- a/.github/workflows/product.yml
+++ b/.github/workflows/product.yml
@@ -23,8 +23,8 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    - name: Debug Environment Variables
-      run: echo "SONAR_TOKEN=${{ secrets.SONAR_TOKEN_PRODUCT }}"
+    - name: Print environment variables for debugging
+      run: printenv
     - name: SonarCloud Scan
       uses: sonarsource/sonarcloud-github-action@master
       with:
@@ -32,3 +32,5 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_PRODUCT }}
+      run: |
+          echo "SONAR_TOKEN=${SONAR_TOKEN}"
