--- a/.github/workflows/product.yml
+++ b/.github/workflows/product.yml
@@ -23,12 +23,10 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    - name: Print environment variables for debugging
-      run: printenv
     - name: SonarCloud Scan
       uses: sonarsource/sonarcloud-github-action@master
       with:
         projectBaseDir: ./services/product-service
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_PRODUCT }}
+        SONAR_TOKEN: 06ff5d696333d2cb5c025f01f802679abf733d10
