--- a/services/product-service/sonar-project.properties
+++ b/services/product-service/sonar-project.properties
@@ -1,3 +1,4 @@
 sonar.projectKey=mukulgaur_eCommerce-Microservices_product-service
 sonar.organization=mukulgaur
 sonar.sources=.
+sonar.java.binaries=src/main/java/com/ecommerce_microservices/product_service
