--- a/services/user-service/sonar-project.properties
+++ b/services/user-service/sonar-project.properties
@@ -1,3 +1,4 @@
 sonar.projectKey=mukulgaur_eCommerce-Microservices_user-service
 sonar.organization=mukulgaur
 sonar.sources=.
+sonar.java.binaries=src/main/java/com/eCommerce/userservice
